--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -30,3 +30,6 @@ XlsxWriter==1.1.5
 django-dramatiq==0.5.0
 dramatiq==1.3.0
 django-dbconn-retry==0.1.5
+cffi==1.14.1
+pycparser==2.20
+bcrypt==3.1.7
